2007-07-27  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	* gui/widgets/e-minicard.c: (add_email_field): Use g_strdup() instead
	of g_strdup_printf() for duplication of a string

2007-07-26  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	* gui/contact-editor/e-contact-editor.c:
	(e_contact_editor_create_source_option_menu):
	* gui/contact-editor/e-contact-quick-add.c: (build_quick_add_dialog):
	* gui/component/addressbook-config.c: (addressbook_config_edit_source):
	Plugged memory leaks.

2007-07-26  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	* gui/widgets/e-minicard.c: (add_email_field): Plugged memory leak.

2007-07-20  Claude Paroz  <claude@2xlibre.net>

	* tools/evolution-addressbook-export.c: Minor typo.

2007-07-09  Matthew Barnes  <mbarnes@redhat.com>

	* gui/widgets/e-addressbook-view.c: (init_collection)
	Abort if ETable specification file fails to load.

2007-07-07  Gilles Dartiguelongue  <gdartigu@svn.gnome.org>

	** Fix for bug #448568

	* gui/contact-editor/contact-editor.glade:
	* gui/contact-editor/e-contact-editor.c: (setup_tab_order):
	cleanup alignement mess and set correct tabbing order. Thanks
	to vinod for the initial glade patch.

2007-07-06  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	** Fix for bug #337787

	* gui/widgets/e-address-view.c: (contact_display_has_selection),
	(eab_view_copy): Copy selection string in contact preview if the
	preview widget has selection string.

2007-06-20  Laszlo (Laca) Peter  <laca@sun.com>

	** Fix for bug #433732

	* tools/Makefile.am: expand @PERL@ in evolution-addressbook-clean.in
	* tools/csv2vcard: rename to csv2vcard.in
	* tools/csv2vcard.in: make the path to perl configurable
	* tools/evolution-addressbook-clean.in: make the path to perl
	  configurable

2007-06-18  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #445793 from Gilles Dartiguelongue  

	* conduit/Makefile.am:

2007-06-18  Srinivasa Ragavan  <sragavan@novell.com>

        ** Fix for bug #448223 from Gilles Dartiguelongue
